base v2 task pages

--- a/bedrock/mozorg/templates/mozorg/contribute/signup-alternate.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/signup-alternate.html
@@ -43,7 +43,7 @@
 
       <li class="task">
         <h3 class="fx-mobile">{{ _('Use Firefox on Your Phone') }}</h3>
-        <a href="{{ url('mozorg.contribute.tasks.firefox-mobile') }}" class="do-task more">{{ _('Download Firefox') }}</a>
+        <a href="{{ url('mozorg.contribute.tasks.v2.firefox-mobile') }}" class="do-task more">{{ _('Download Firefox') }}</a>
         <div class="tooltip hidden">
           <p>{{ _('Firefox is the independent, people-first browser with the privacy and features you love, now available on Android and iOS!') }}</p>
         </div>
@@ -51,7 +51,7 @@
 
       <li class="task">
         <h3 class="fx-twitter">{{ _('Connect on Twitter') }}</h3>
-        <a href="{{ url('mozorg.contribute.tasks.follow-mozilla') }}" class="do-task more">{{ _('Follow Mozilla') }}</a>
+        <a href="{{ url('mozorg.contribute.tasks.v2.follow-mozilla') }}" class="do-task more">{{ _('Follow Mozilla') }}</a>
         <div class="tooltip hidden">
           <p>{{ _('Stay connected with us for news, announcements and opportunities from the Firefox team feed.') }}</p>
         </div>
@@ -66,7 +66,7 @@
     <ul class="challenging">
       <li class="task">
         <h3 class="coding">{{ _('Watch Someone Live Hack on Firefox') }}</h3>
-        <a href="{{ url('mozorg.contribute.tasks.joy-of-coding') }}" class="do-task more">{{ _('Watch the video') }}</a>
+        <a href="{{ url('mozorg.contribute.tasks.v2.joy-of-coding') }}" class="do-task more">{{ _('Watch the video') }}</a>
         <div class="tooltip hidden">
           <p>{{ _('Firefox engineer mconley livehacks and crushes bugs where he finds them in this unscripted, uncensored, true-to-life video series.') }}</p>
         </div>
@@ -74,7 +74,7 @@
 
       <li class="task">
         <h3 class="fxos">{{ _('Help Build Firefox OS') }}</h3>
-        <a href="{{ url('mozorg.contribute.tasks.build-firefox') }}" class="do-task more">{{ _('Start Foxfooding') }}</a>
+        <a href="{{ url('mozorg.contribute.tasks.v2.build-firefox') }}" class="do-task more">{{ _('Start Foxfooding') }}</a>
         <div class="tooltip hidden">
           <p>{{ _('If you’re interested in new skills (or adept at porting), get involved in this ground-up project to eat our own fox food by building mobile Firefox OS together!') }}</p>
         </div>
@@ -82,7 +82,7 @@
 
       <li class="task">
         <h3 class="devtools">{{ _('Learn a Bit About Coding') }}</h3>
-        <a href="{{ url('mozorg.contribute.tasks.devtools-challenger') }}" class="do-task more">{{ _('Take the challenge') }}</a>
+        <a href="{{ url('mozorg.contribute.tasks.v2.devtools-challenger') }}" class="do-task more">{{ _('Take the challenge') }}</a>
         <div class="tooltip hidden">
           <p>{{ _('Explore the new tools in Firefox Developer Edition that take the pain out of CSS animation.') }}</p>
         </div>
