Fix v1 landing page

--- a/bedrock/mozorg/templates/mozorg/contribute/signup-new.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/signup-new.html
@@ -35,7 +35,7 @@
     <ul class="simple">
       <li class="task">
         <h3>{{ _('Customize Your Desktop Browser') }}</h3>
-        <a href="{{ url('mozorg.contribute.tasks.whimsey') }}" class="do-task more">{{ _('Add to Firefox') }}</a>
+        <a href="{{ url('mozorg.contribute.tasks.whimsy') }}" class="do-task more">{{ _('Add to Firefox') }}</a>
         <div class="tooltip hidden">
           <p>{{ _('Whimsy is a fun Firefox desktop add-on and experiment with subtle, whimsical things happening in the browser.') }}</p>
         </div>
