--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/firefox-mobile.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/firefox-mobile.html
@@ -29,7 +29,7 @@
     </li>
     <li id="step_two" class="two">
       <div class="step-content">
-        <p>{{ _('<a href="https://twitter.com/intent/tweet?text=Firefox+is+available+everywhere!+Now+you+can+get+it+for+desktop%2c+iOS+or+Android!&amp;url=https://www.mozilla.org/firefox/products&amp;hashtags=MozParticipate">Tell your friends about Firefox on Twitter') }}</p>
+        <p><a href="https://twitter.com/intent/tweet?text=Firefox+is+available+everywhere!+Now+you+can+get+it+for+desktop%2c+iOS+or+Android!&amp;url=https://www.mozilla.org/firefox/products&amp;hashtags=MozParticipate">{{ _('Tell your friends about Firefox on Twitter') }}</a></p>
       </div>
     </li>
   </ol>
