--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/follow-mozilla.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/follow-mozilla.html
@@ -16,8 +16,7 @@
         <h3>{{ _('Tweet This') }}</h3>
       </header>
       <div class="step-content">
-        <img src="{{ static('/media/img/contribute/signup/startmozilla.png') }}" width="600" height="338" alt="" />
-        <!-- TODO: Add tweet field -->
+        <p><a href="https://twitter.com/intent/tweet?text=Firefox+is+available+everywhere!+Now+you+can+get+it+for+desktop%2c+iOS+or+Android!&amp;url=https://www.mozilla.org/firefox/products&amp;hashtags=MozParticipate">{{ _('Tell your friends about Firefox on Twitter') }}</a></p>
       </div>
     </li>
   </ol>
