--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/build_firefox.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/build_firefox.html
@@ -6,6 +6,8 @@
 
 {% block page_title %}{{ _('“Foxfooding” means we’re building Firefox OS together!') }}{% endblock %}
 
+{% block more_tasks %}{{ url('mozorg.contribute.signup_alternate') }}{% endblock %}
+
 {% block taskview_title %}{{ _('“Foxfooding” means we’re building Firefox OS together!') }}{% endblock %}
 {% block taskview_lead %}{{ _('We’re building Firefox OS and need your help. If you’re interested in new skills (or adept at porting), get involved in this ground-up project to eat our own fox food by building mobile Firefox OS together.') }}{% endblock %}
 
