--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/follow-mozilla.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/follow-mozilla.html
@@ -12,7 +12,7 @@
 {% block taskview_lead %}{{ _('There are so many ways to get involved with Mozilla and support the browser. Tweet Firefox and learn more about the browser, and how you can pitch in!') }}{% endblock %}
 
 {% block task_content %}
-  <ol class="task-steps single">
+  <ol class="task-steps">
     <li id="step_one" class="one">
       <header>
         <h3>{{ _('Tweet This') }}</h3>
@@ -24,7 +24,7 @@
             <textarea name="text" id="tweet_txt" maxlength="140">Hi @startmozilla! I’m a {enter your main skill here: developer, designer, writer, etc.} who would like to contribute to Mozilla!</textarea>
             <p>Number of characters left: <span class="char-count"></span></p>
             <input type="hidden" id="hashtag" name="hashtags" value="QA1" />
-            <input type="submit" value="Tweet" />
+            <input type="submit" value="Tweet" data-action="tweet" data-task="follow-mozilla" data-step="one" data-complete="true" />
           </fieldset>
         </form>
       </div>
