--- a/media/css/mozorg/contribute/taskview.less
+++ b/media/css/mozorg/contribute/taskview.less
@@ -133,6 +133,7 @@ main {
     }
 
     .step-content {
+        display: inline-block;;
         margin-left: 70px;
     }
 
@@ -155,16 +156,6 @@ video {
     padding: 10px;
     width: 600px;
     height: 338px;
-}
-
-/* Tasks with only a single step */
-.single {
-    .step-content {
-        display: inline-block;
-    }
-    .video {
-        margin: 0 0 @baseLine;
-    }
 }
 
 .thankyou {
