--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/joy-of-coding.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/joy-of-coding.html
@@ -6,6 +6,8 @@
 
 {% block page_title %}{{ _('Watch: The Joy of Coding') }}{% endblock %}
 
+{% block more_tasks %}{{ url('mozorg.contribute.signup_alternate') }}{% endblock %}
+
 {% block taskview_title %}{{ _('Watch The Joy of Coding, then discuss it with other Mozillians!') }}{% endblock %}
 {% block taskview_lead %}{{ _('Anyone can contribute to Firefox by finding and fixing errors that people report via Bugzilla. Watch a demonstration of a Firefox engineer live hacking to see what it’s all about!') }}{% endblock %}
 
