--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/joy-of-coding.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/joy-of-coding.html
@@ -10,17 +10,17 @@
 {% block taskview_lead %}{{ _('Anyone can contribute to Firefox by finding and fixing errors that people report via Bugzilla. Watch a demonstration of a Firefox engineer live hacking to see what it’s all about!') }}{% endblock %}
 
 {% block task_content %}
-  <ol class="task-steps single">
+  <ol class="task-steps">
     <li id="step_one" class="one">
       <header>
-        <h3>{{ _('Watch Episode 34') }}</h3>
+        <h3>{{ _('Watch The Intro!') }}</h3>
         <p>{{ _('<a href="https://twitter.com/mike_conley" rel="external">@mike_conley</a> livehacks on real Firefox bugs while thinking out loud.') }}</p>
       </header>
       <div class="step-content">
-        <video preload="none" controls poster="{{ static('/media/img/contribute/signup/joc_poster.png') }}">
-          <source src="{{ static('/media/img/contribute/signup/joyofcoding24.mp4') }}" type="video/mp4" />
+        <video id="joc" preload="none" controls poster="{{ static('/media/img/contribute/signup/joc_poster.png') }}" data-action="play" data-task="joyofcoding" data-step="one" data-complete="true">
+          <source src="{{ static('/media/img/contribute/signup/joc-video.mp4') }}" type="video/mp4" />
         </video>
-        <button type="button" class="watch-joc">Watch Video</button>
+        <button type="button" data-action="play" data-task="joyofcoding" data-step="one" data-complete="true">Watch Video</button>
       </div>
     </li>
   </ol>
