--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/joy-of-coding.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/joy-of-coding.html
@@ -6,28 +6,29 @@
 
 {% block page_title %}{{ _('Watch: The Joy of Coding') }}{% endblock %}
 
-{% block more_tasks %}{{ url('mozorg.contribute.signup_alternate') }}{% endblock %}
-
 {% block taskview_title %}{{ _('Watch The Joy of Coding, then discuss it with other Mozillians!') }}{% endblock %}
 {% block taskview_lead %}{{ _('Anyone can contribute to Firefox by finding and fixing errors that people report via Bugzilla. Watch a demonstration of a Firefox engineer live hacking to see what it’s all about!') }}{% endblock %}
 
 {% block task_content %}
-  <ol class="task-steps single">
+  <ol class="task-steps">
     <li id="step_one" class="one">
       <header>
-        <h3>{{ _('Watch the Trailer') }}</h3>
+        <h3>{{ _('Watch The Intro!') }}</h3>
         <p>{{ _('<a href="https://twitter.com/mike_conley" rel="external">@mike_conley</a> livehacks on real Firefox bugs while thinking out loud.') }}</p>
       </header>
       <div class="step-content">
-        <video preload="none" controls poster="{{ static('/media/img/contribute/signup/joc_poster.png') }}">
-          <source src="{{ static('/media/img/contribute/signup/joyofcoding24.mp4') }}" type="video/mp4" />
+        <video id="joc" preload="none" controls poster="{{ static('/media/img/contribute/signup/joc_poster.png') }}" data-action="play" data-task="joyofcoding" data-step="one" data-complete="false">
+          <source src="{{ static('/media/img/contribute/signup/joc-video.mp4') }}" type="video/mp4" />
         </video>
-        <button type="button" class="watch-joc">Watch Video</button>
+        <button type="button" data-action="play" data-task="joyofcoding" data-step="one" data-complete="false">Watch Video</button>
       </div>
     </li>
     <li id="step_two" class="two">
+      <header>
+        <h3>{{ _('Join the discussion') }}</h3>
+      </header>
       <div class="step-content">
-        <p>{{ _<a href="https://air.mozilla.org/the-joy-of-coding-mconley-livehacks-on-firefox-episode-1/">Sign in to our internal video site, Air Mozilla</a>, to discuss the video and follow the rest of the series. }}</p>
+        <p>{{ _('<a href="%s" rel="external" data-action="discuss" data-task="joyofcoding" data-step="two" data-complete="true" target=_blank>Sign in to our internal video site, Air Mozilla</a>, to discuss the video with other Mozillians.')|format('https://air.mozilla.org/the-joy-of-coding-mconley-livehacks-on-firefox-episode-1/') }}</p>
       </div>
     </li>
   </ol>
