Adds foxfooding v1 and v2 tasks

--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/joy-of-coding.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/joy-of-coding.html
@@ -20,7 +20,7 @@
         <video id="joc" preload="none" controls poster="{{ static('/media/img/contribute/signup/joc_poster.png') }}" data-action="play" data-task="joyofcoding" data-step="one" data-complete="false">
           <source src="{{ static('/media/img/contribute/signup/joc-video.mp4') }}" type="video/mp4" />
         </video>
-        <button type="button" data-action="play" data-task="joyofcoding" data-step="one" data-complete="false">Watch Video</button>
+        <button type="button" data-action="play" data-task="joyofcoding" data-step="one" data-complete="false">{{ _('Watch Video') }}</button>
       </div>
     </li>
     <li id="step_two" class="two">
