--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/build-firefox.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/build-firefox.html
@@ -10,14 +10,13 @@
 {% block taskview_lead %}{{ _('We’re building Firefox OS and need your help. If you’re interested in new skills (or adept at porting), get involved in this ground-up project to eat our own fox food by building mobile Firefox OS together.') }}{% endblock %}
 
 {% block task_content %}
-  <ol class="task-steps single">
+  <ol class="task-steps">
     <li id="step_one" class="one">
       <header>
         <h3>{{ _('Join the Participation Hub') }}</h3>
       </header>
       <div class="step-content">
-        <img src="http://placehold.it/600x338?text=Placeholder+Image" width="600" height="338" alt="" />
-        <a href="https://firefoxos.mozilla.community/" rel="external" class="build-firefox" role="button" target="_blank">Start “Foxfooding”</a>
+        <p><a href="https://firefoxos.mozilla.community/" rel="external" class="taskview-button" data-action="join" data-task="foxfooding" data-step="one" data-complete="true" target="_blank">{{ _('Start “Foxfooding”') }}</a></p>
       </div>
     </li>
   </ol>
