--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/devtools-challenger.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/devtools-challenger.html
@@ -6,6 +6,8 @@
 
 {% block page_title %}{{ _('Go to Dev Tools Challenger Page and Complete CSS Task') }}{% endblock %}
 
+{% block more_tasks %}{{ url('mozorg.contribute.signup_alternate') }}{% endblock %}
+
 {% block taskview_title %}{{ _('Complete a CSS Task using our all-new Developer Tools Challenger') }}{% endblock %}
 {% block taskview_lead %}{{ _('The more you know about the web, the easier it is to make it your own! Participate in the web by testing your web literacy skills by completing a CSS task in Firefox Developer Edition.') }}{% endblock %}
 
